Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,8 +211,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n",
-    "name"
+    "\"art.vandelay@vandelay.co\" # False"
    ]
   },
   {
