Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "ends_with_com."
+    "ends_with_com.\"art.vandelay@vandelay.cop\""
    ]
   },
   {
