--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "ends_with_com.\"art.vandelay@vandelay.co\""
+    "\"art.vandelay@vandelay.co\".endswith."
    ]
   },
   {
